[package]
name = "thread-decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
mongodb = "2.3.0"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = "1.20.1"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest = "0.11.11"
futures ="0.3.24"
structopt = { version = "0.3", default-features = false }